syntax = "proto3";

option csharp_namespace = "BackendApi";

package job;

// The job service definition.
service Job {
  // Register job
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc GetProcessingResult (RegisterResponse) returns (ProcessingResultResponse);
}

// The request message containing the user's name.
message RegisterRequest {
  string description = 1;
  string data = 2;
}

// The response message containing the greetings.
message RegisterResponse {
  string id = 1;
}

enum ProcessingResultStatus {
  Done = 0;
  InProgress = 1;
}

message ProcessingResultResponse {
  ProcessingResultStatus status = 1;
  string value = 2;
}
